[package]
name = "Engine-Test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
pollster = "0.3.0"
vertix = "0.1.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
